test: add barrier and prefetch test

--- a/learnwhyfast/CMakeLists.txt
+++ b/learnwhyfast/CMakeLists.txt
@@ -1,1 +1,7 @@
 add_executable(learn_thread_pool test.cpp)
+
+
+add_executable(learn_barrier testbarrier.cpp ../engine_race/barrier.h)
+
+
+add_executable(learn_prefetch test_prefetch.cpp)
