test: smooth all

--- a/learnwhyfast/CMakeLists.txt
+++ b/learnwhyfast/CMakeLists.txt
@@ -5,3 +5,5 @@ add_executable(learn_barrier testbarrier.cpp ../engine_race/barrier.h)
 
 
 add_executable(learn_prefetch test_prefetch.cpp)
+add_executable(learn_prefetch_1 test_prefetch_1.cpp)
+add_executable(learn_prefetch_2 test_prefetch_2.cpp)
